# PyNGauss

./: README.md  pyproject.toml  pyproject.toml~
examples/: Gaussian_MFs.ipynb
src/: __init__.py
src/pyngauss/: __init__.py  __init__.py~  filters.py  mfs.py  sk.py  theory.py
src/pyngauss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
